ncc/testsuite/positive/bug-1166-lib.n
// REFERENCE: Nemerle.Compiler

macro testMacro () {<[
  def x = 4;
  Nemerle.IO.sprint ("test$x")
]>}
