ncc/testsuite/negative/delayed-macro-colors.n
def foo(lst) { lst.Map(Nemerle.Collections.List.IsEmpty) }
foreach (_ in foo([]))
  _ = x // E: unbound
 
